Further document structure defined

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 ### NOVAthesis template ###
 
+ICSE2009.pdf
+
 # Ignore all template files…
 template.*
 # …except template.tex
@@ -336,7 +338,8 @@ TSWLatexianTemp*
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
